# tilia

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
crates/tilia/: Cargo.toml
crates/tilia-console/: Cargo.toml
crates/tilia-console/src/: lib.rs  main.rs
crates/tilia-widget/: Cargo.toml
crates/tilia-widget/src/: lib.rs  stateful_list.rs
crates/tilia/src/: client.rs  filter.rs  history.rs  lib.rs  server.rs  state.rs  transport.rs  worker_guard.rs  writer.rs
example/: Cargo.toml
example/src/: main.rs
examples/: .dockerignore  Cargo.toml  Dockerfile
src/: command.rs  filter.rs  server.rs  state.rs  worker_guard.rs  writer.rs
tracing-ipc/: Cargo.toml
tracing-ipc-console/: Cargo.toml
tracing-ipc-console/src/: lib.rs  main.rs
tracing-ipc-widget/: Cargo.toml
tracing-ipc-widget/src/: lib.rs  stateful_list.rs
tracing-ipc/src/: client.rs  command.rs  filter.rs  lib.rs  server.rs  state.rs  worker_guard.rs  writer.rs
