[package]
edition = "2021"
name = "tracing-ipc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
once_cell = "1.14.0"
parity-tokio-ipc = "0.9.0"
tokio = {version = "1.21.0", features = ["sync", "rt-multi-thread", "macros", "time", "io-util"]}
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
