[workspace]
members = ["crates/*", "examples"]
resolver = "2"

[workspace.dependencies]
tilia = { path = "./crates/tilia" }
tilia-widget = { path = "./crates/tilia-widget" }

background-service = { git = "https://github.com/aschey/background-service-rs", rev = "6d9a1ddb2b57ac4fe305eff84545168d70171a5d" }
bytes = "1"
futures = "0.3"
tokio = { version = "1" }
bollard = { version = "0.19" }
pin-project-lite = { version = "0.2" }
tokio-util = "0.7.16"
transport-async = { git = "https://github.com/aschey/transport-async-rs", rev = "bf3922e692de1bf7d7a613fa703609e5f13e2bc7" }
tracing = "0.1"
tracing-subscriber = "0.3"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
clap = { version = "4.5.26" }
ansi-to-tui = "7"

ctrlc = "3.4.5"
flate2 = "1.0.35"
ignore = "0.4.23"
rand = "0.9.2"
tar = "0.4.43"
