[package]
edition = "2021"
name = "tilia-example"
publish = false
version = "0.1.0"

[dependencies]
ctrlc = "3.4.0"
rand = "0.8.5"
tilia = { path = "../crates/tilia" }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
tower-rpc = { git = "https://github.com/aschey/tower-rpc", rev = "4314c2f8b2e49c6ad48138bbacf581f83c5f084e", features = [
    "client",
    "server",
    "ipc",
] }
