[package]
edition = "2021"
name = "tilia-example"
publish = false
version = "0.1.0"

[dependencies]
ctrlc = "3.4.0"
rand = "0.8.5"
tilia = { path = "../crates/tilia", features = ["ipc"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
