[package]
edition = "2021"
name = "tilia-example"
publish = false
version = "0.1.0"

[dependencies]
bollard = { version = "0.18.1", features = ["buildkit"] }
ctrlc = "3.4.5"
flate2 = "1.0.35"
futures = "0.3.31"
ignore = "0.4.23"
rand = "0.8.5"
tar = "0.4.43"
tilia = { path = "../crates/tilia", features = ["ipc", "docker"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }

[[bin]]
name = "ipc"

[[bin]]
name = "docker"
