[package]
edition = "2021"
name = "tilia-example"
publish = false
version = "0.1.0"

[dependencies]
bollard = { workspace = true, features = ["buildkit"] }
ctrlc = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
ignore = { workspace = true }
rand = { workspace = true }
tar = { workspace = true }
tilia = { workspace = true, features = ["ipc", "docker"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }

[[bin]]
name = "ipc"

[[bin]]
name = "docker"
