[package]
edition = "2021"
name = "tilia-console"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27", features = ["event-stream"] }
futures = { version = "0.3" }
tilia-widget = { path = "../tilia-widget", features = ["ipc", "tcp", "docker"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ratatui = "0.27"
tower-rpc = { git = "https://github.com/aschey/tower-rpc", rev = "51a8f475562ee5d3af1e08463e20f8a175160a30", features = [
    "client",
    "server",
    "ipc",
] }
clap = { version = "4.5.9", features = ["derive"] }
