[package]
edition = "2021"
name = "tilia-console"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
futures = { version = "0.3" }
tilia-widget = { path = "../tilia-widget", features = ["ipc", "tcp", "docker"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ratatui = "0.29"
clap = { version = "4.5.26", features = ["derive"] }
transport-async = { git = "https://github.com/aschey/transport-async-rs", rev = "918af6562e6c80c74d0aeb71850dccfd388c6463", features = [
    "codec",
] }
