[package]
edition = "2024"
name = "tilia-console"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { workspace = true, features = ["event-stream"] }
futures = { workspace = true }
tilia-widget = { workspace = true, features = ["ipc", "tcp", "docker"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
ratatui = { workspace = true }
clap = { workspace = true, features = ["derive"] }
transport-async = { workspace = true, features = ["codec"] }
