[package]
edition = "2021"
name = "tilia-widget"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "6"
crossterm = { version = "0.28" }
tilia = { path = "../tilia" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
ratatui = "0.28"
futures = { version = "0.3" }

[features]
tcp = ["tilia/tcp"]
ipc = ["tilia/ipc"]
docker = ["tilia/docker"]
