[package]
edition = "2021"
name = "tilia-widget"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = { workspace = true }
crossterm = { workspace = true }
tilia = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
ratatui = { workspace = true }
futures = { workspace = true }

[features]
tcp = ["tilia/tcp"]
ipc = ["tilia/ipc"]
docker = ["tilia/docker"]
