[package]
edition = "2021"
name = "tilia"
version = "0.1.0"

[dependencies]
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "15db3730c47a7bd6221c65cbb68b2a9373ff41f0" }
bytes = "1"
futures = "0.3"
futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
tokio = { version = "1", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
] }
bollard = { version = "0.16", optional = true }
pin-project-lite = { version = "0.2", optional = true }
tokio-util = "0.7"
transport-async = { git = "https://github.com/aschey/transport-async-rs", rev = "fa5ac34bf6f02189eaf2bde5bb552a4c08265f98", features = [
    "codec",
] }

tracing = "0.1"
tracing-subscriber = "0.3"

[features]
tcp = ["transport-async/tcp"]
ipc = ["transport-async/ipc"]
docker = ["bollard", "pin-project-lite"]
