[package]
edition = "2024"
name = "tilia"
version = "0.1.0"

[dependencies]
background-service = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = [
  "sync",
  "rt-multi-thread",
  "macros",
  "time",
  "io-util",
] }
bollard = { workspace = true, optional = true }
pin-project-lite = { workspace = true, optional = true }
tokio-util = { workspace = true }
transport-async = { workspace = true, features = ["codec"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
tcp = ["transport-async/tcp"]
ipc = ["transport-async/ipc"]
docker = ["bollard", "pin-project-lite"]
